Avance hasta gato

--- a/laboratorios/Lab_0.ipynb
+++ b/laboratorios/Lab_0.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "<h1><center>Laboratorio 0: Practicando en Python </center></h1>\n",
     "\n",
-    "<center><strong>MDS7202: Laboratorio de Programación Científica para Ciencia de Datos - Primavera 202q</strong></center>\n",
+    "<center><strong>MDS7202: Laboratorio de Programación Científica para Ciencia de Datos - Primavera 2022</strong></center>\n",
     "\n",
     "---"
    ]
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "62e43c3c",
    "metadata": {
     "cell_id": "5b56a1d50817404394b4a61a6592dae0",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a407a48f",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ab71ba29",
    "metadata": {
     "cell_id": "f7dd50193057462eb733ee0ce9d3ba27",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "d01f5225",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "9b533e19",
    "metadata": {
     "cell_id": "e860ad8fe0624f06ad77c66c71098b06",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "bfcc2946",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "813fb0cc",
    "metadata": {
     "cell_id": "de690768e87a4e49a9e072db5f50745c",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "0ce3fec7",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "019bea6e",
    "metadata": {
     "cell_id": "9d672ec452da4abcba3c86d499d3feff",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "b51ede32",
    "metadata": {},
    "outputs": [],
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "ecd9ef47",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "0e338998",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
    "id": "8fa27f3a",
    "metadata": {
     "ExecuteTime": {
@@ -476,7 +476,19 @@
    "outputs": [],
    "source": [
     "def calc_capital_final(capital_inicial, tasa_interes, años):\n",
-    "    ############ Su Código Aquí####################"
+    "    ############ Su Código Aquí####################\n",
+    "    return capital_inicial * (1 + tasa_interes / 100) ** años"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a1ecfc46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prueba\n",
+    "assert calc_capital_final(1000000, 5, 2) == 1102500.0"
    ]
   },
   {
@@ -505,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "6024240c",
    "metadata": {
     "cell_id": "7ec5c56ff40e4cc4bd69b4ff11a0137a",
@@ -515,7 +527,22 @@
    },
    "outputs": [],
    "source": [
-    "############ Su Código Aquí####################"
+    "############ Su Código Aquí####################\n",
+    "def sumatoria(x, n):\n",
+    "    suma_total = 0\n",
+    "    criterio_convergencia = 10 ** -3\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        \n",
+    "        if i < 20:\n",
+    "            suma_tmp = suma_total + 1 / x[i]\n",
+    "            \n",
+    "            if abs(suma_total - suma_tmp) < criterio_convergencia:\n",
+    "                return True\n",
+    "                \n",
+    "            suma_total = suma_tmp\n",
+    "        \n",
+    "    return False"
    ]
   },
   {
@@ -538,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "293dd5fb",
    "metadata": {
     "cell_id": "6726c604d7f340fa81d8167f40ad07cb",
@@ -548,7 +575,21 @@
    },
    "outputs": [],
    "source": [
-    "############ Su Código Aquí####################"
+    "############ Su Código Aquí####################\n",
+    "def anagrama(x,y):\n",
+    "    return sorted(x.lower()) == sorted(y.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "228ec843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prueba\n",
+    "assert anagrama(\"caso\", \"caos\") == anagrama(\"caso\", \"saco\")\n",
+    "assert anagrama(\"ocaso\", \"caso\") == False and anagrama(\"acaso\", \"caso\") == False"
    ]
   },
   {
@@ -590,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "id": "5d0132a2",
    "metadata": {
     "ExecuteTime": {
@@ -603,8 +644,52 @@
    },
    "outputs": [],
    "source": [
+    "gato = [[None for _ in range(3)] for _ in range(3)]\n",
+    "\n",
+    "def es_tachable(i, j):\n",
+    "    gato[i][j] is None\n",
+    "\n",
+    "def tachar(i, j, v):\n",
+    "    if v.lower() in [\"x\", \"o\"] and es_tachable(i, j):\n",
+    "        gato[i][j] = v.lower()\n",
+    "        return True        \n",
+    "    return False\n",
+    "\n",
+    "def existe_ganador():\n",
+    "    medio = gato[1][1]\n",
+    "    if medio is not None and len(set([gato[0][0], medio, gato[2][2]])) == 1 or len(set([gato[0][2], medio, gato[2][0]])):\n",
+    "        return True     \n",
+    "    \n",
+    "    for i in gato:   \n",
+    "        if i[0] is not None and len(set(i)) == 1:\n",
+    "            return True\n",
+    "        \n",
+    "    for i in range(3):\n",
+    "        if gato[i][0] is not None and len(set([gato[i][j] for j in range(3)])) == 1:\n",
+    "            return True\n",
+    "        \n",
     "def print_gato(gato):\n",
-    "    ############ Su Código Aquí####################"
+    "    ############ Su Código Aquí####################\n",
+    "    existe_ganador = False\n",
+    "    print(gato) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "618aba56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[None, None, None], [None, None, None], [None, None, None]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_gato(gato)"
    ]
   },
   {
