correccion ejercicio convergencia

--- a/laboratorios/Lab_0.ipynb
+++ b/laboratorios/Lab_0.ipynb
@@ -502,22 +502,22 @@
    "source": [
     "### Pregunta 2: \n",
     "\n",
-    "Escriba una función que para $x \\ne 0$, calcule  $\\frac{1}{x_0} + \\frac{1}{x_1} + \\frac{1}{x_2} + \\dots + \\frac{1}{x_n}$.\n",
+    "Escriba una función que para $x \\ne 0$, calcule  $\\frac{1}{x^0} + \\frac{1}{x^1} + \\frac{1}{x^2} + \\dots + \\frac{1}{x^n}$. Para esto, considere `x` como un `int` o `float` y a `n` como un `int` en la siguiente función:\n",
     "\n",
     "```python\n",
     "def sumatoria(x,n):\n",
     "    pass\n",
     "```\n",
     "\n",
-    "Use la función anterior en un programa que determine si la suma  $\\frac{1}{x_0} + \\frac{1}{x_1} + \\frac{1}{x_2} + \\dots + \\frac{1}{x_n}$ converge o no. \n",
+    "Use la función anterior en un programa que determine si la suma  $\\frac{1}{x^0} + \\frac{1}{x^1} + \\frac{1}{x^2} + \\dots + \\frac{1}{x^n}$ converge o no.  Utilice un iterador para probar diferentes n en la función `sumatoria` creada, donde el programa deberá finalizar si cumple o falla los siguientes puntos de convergencia:\n",
     "\n",
-    "- Se considera que la suma converge si la diferencia entre dos sumas sucesivas resulta menor que $10^{-3}$. \n",
+    "- Se considera que la suma converge si la diferencia entre dos sumas sucesivas resulta menor que $10^{-3}$. Ejemplo: $sumatoria(x,1) - sumatoria(x,0) < 10^{-3}$\n",
     "- Se considera que no converge si para $n=20$ aún no se alcanza el criterio de convergencia. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "6024240c",
    "metadata": {
     "cell_id": "7ec5c56ff40e4cc4bd69b4ff11a0137a",
@@ -528,21 +528,52 @@
    "outputs": [],
    "source": [
     "############ Su Código Aquí####################\n",
-    "def sumatoria(x, n):\n",
-    "    suma_total = 0\n",
-    "    criterio_convergencia = 10 ** -3\n",
-    "    \n",
-    "    for i in range(n):\n",
-    "        \n",
-    "        if i < 20:\n",
-    "            suma_tmp = suma_total + 1 / x[i]\n",
-    "            \n",
-    "            if abs(suma_total - suma_tmp) < criterio_convergencia:\n",
-    "                return True\n",
-    "                \n",
-    "            suma_total = suma_tmp\n",
-    "        \n",
-    "    return False"
+    "def sumatoria(x, n):    \n",
+    "    return sum([\n",
+    "        1 / (x ** i)\n",
+    "        for i in range(n + 1)\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a231f782",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluando la sumatoria con x=2 y n=0\n",
+      "Evaluando la sumatoria con x=2 y n=1\n",
+      "Evaluando la sumatoria con x=2 y n=2\n",
+      "Evaluando la sumatoria con x=2 y n=3\n",
+      "Evaluando la sumatoria con x=2 y n=4\n",
+      "Evaluando la sumatoria con x=2 y n=5\n",
+      "Evaluando la sumatoria con x=2 y n=6\n",
+      "Evaluando la sumatoria con x=2 y n=7\n",
+      "Evaluando la sumatoria con x=2 y n=8\n",
+      "Evaluando la sumatoria con x=2 y n=9\n",
+      "La sumatoria con x=2 converge en n=10\n"
+     ]
+    }
+   ],
+   "source": [
+    "criterio_convergencia = 10 ** -3\n",
+    "suma_anterior = 0\n",
+    "n = 0\n",
+    "x = 2\n",
+    "\n",
+    "while n < 21:\n",
+    "    suma_actual = sumatoria(x, n)\n",
+    "    if abs(suma_actual - suma_anterior) < criterio_convergencia:\n",
+    "        print(f\"La sumatoria con x={x} converge en n={n}\")\n",
+    "        n = 21\n",
+    "    else:\n",
+    "        print(f\"Evaluando la sumatoria con x={x} y n={n}\")\n",
+    "        suma_anterior = suma_actual \n",
+    "        n += 1"
    ]
   },
   {
