fix bandeja privada

--- a/laboratorios/Lab1_solucion_alcazar_salomo.ipynb
+++ b/laboratorios/Lab1_solucion_alcazar_salomo.ipynb
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2dbec547",
+   "id": "cff61248",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,11 +1123,11 @@
     "    def agregar_ingrediente(self, nueva_fruta: str) -> None:\n",
     "      \"\"\"Agrega una nueva fruta a la bandeja representada por un diccionario\n",
     "      con las llaves: nombre-tipo-color-pepas.\"\"\"\n",
-    "      self.bandeja.append(nueva_fruta)\n",
+    "      self._bandeja.append(nueva_fruta)\n",
     "     \n",
     "    def listar_ingredientes(self) -> None:\n",
     "      \"\"\"Muestra la lista de ingredientes actuales en la bandeja.\"\"\"\n",
-    "      if len(self.bandeja) > 0:\n",
+    "      if len(self._bandeja) > 0:\n",
     "        print(f\"Ingredientes en la bandeja: {', '.join([fruta.get('nombre', 'Fruta sin nombre') for fruta in self.bandeja])}.\")\n",
     "      else:\n",
     "        print(\"Bandeja vacía\")\n",
@@ -1138,18 +1138,18 @@
     "      self.esta_enchufado()\n",
     "\n",
     "      # Verficiar que la bandeja tenga al menos un ingrediente\n",
-    "      if len(self.bandeja) == 0:\n",
+    "      if len(self._bandeja) == 0:\n",
     "        raise ValueError(\"Error ❌: La bandeja no tiene ingredientes.\") \n",
     "\n",
     "      # Advertir si hay una fruta con pepas...\n",
-    "      if len(filtrar_por_pepa_funcional(self.bandeja, tipo_de_dato=True)) != 0:\n",
+    "      if len(filtrar_por_pepa_funcional(self._bandeja, tipo_de_dato=True)) != 0:\n",
     "        print(\"Alerta ⚠️: El jugo puede contener restos de pepas.\")\n",
     "\n",
     "      # Mensaje de que el jugo esta listo y describir su contenido \n",
-    "      mensaje = f\"Jugo de {', '.join([fruta['nombre'] for fruta in self.bandeja])} listo. 🏖️🥤 Que lo disfrutes!!! 🥤🏖️.\"\n",
+    "      mensaje = f\"Jugo de {', '.join([fruta['nombre'] for fruta in self._bandeja])} listo. 🏖️🥤 Que lo disfrutes!!! 🥤🏖️.\"\n",
     "\n",
     "      # Vaciar bandeja y retornar mensaje\n",
-    "      self.bandeja = []\n",
+    "      self._bandeja = []\n",
     "      return mensaje"
    ]
   },
