Modificar error de redacción último parrafo

--- a/laboratorios/Lab4_solucion_alcazar_salomo.ipynb
+++ b/laboratorios/Lab4_solucion_alcazar_salomo.ipynb
@@ -3866,12 +3866,11 @@
         "Una\n",
         "escala de color continua nos ayuda a identificar el nivel de promedio para\n",
         "cada grupo y facilita la comparación. Se destaca de la visualización los grupos más bajos (i.e. school A-B), \n",
-        "homogeneos (i.e. college B-C-D), o con promedios más altos (i.e. postgraduate-E).\n",
+        "homogéneos (i.e. college B-C-D), o con promedios más altos (i.e. postgraduate-E).\n",
         "\n",
-        "Esta visualización promueve el contraste de patrones a un alto nivel y nos \n",
-        "facilita las comparaciones que sean relativamente pequeñas entre grupos. Una forma\n",
-        "de alivianar este problema es agregando etiquetas con las anotaciones del\n",
-        "`GPA` para cada uno de los 15 grupos."
+        "Esta visualización facilita el contraste de patrones a un alto nivel pero\n",
+        "dificulta las comparaciones que son relativamente pequeñas entre grupos.\n",
+        "Una forma de alivianar este problema es agregando etiquetas con las anotaciones del `GPA` para cada uno de los 15 grupos, actuando también como una tabla de contingencia.\n"
       ],
       "metadata": {
         "id": "mZmnercxvwlc"
